<resources>
    <string name="app_name">Assignment1</string>
    <string name="city_name">Seoul</string>
    <string name="home">Home</string>
    <string name="home_cardview_text">
        * Country: South Korea\n
        * Area: Total	605.21 km2 (233.67 sq mi)\n
        * Population(2021): 9,765,869\n
        * Density: 16,000/km2 (42,000/sq mi)\n
        * Website: http://www.seoul.go.kr
    </string>
    <string name="food">Food</string>
    <string name="food_Hwangsaengga_name">Hwangsaengga</string>
    <string name="food_Hwangsaengga_description">Hwangsaengga Kalguksu specializes in Pyongyang-style kalguksu (hand-cut noodles). The star of the menu is sagol kalguksu, a hearty bowl of noodles in thick beef bone broth with pumpkin, mushrooms, and green onions for garnish; the subtle sweetness from the vegetables nicely mingles with the umami of the broth. In the summer, try the special kongguksu, noodles in cold broth made from ground soybeans, sesame, and various nuts. No matter the time of year, order a side of the soft, meaty dumplings for the table.</string>
    <string name="food_Hwangsaengga_address">78 Bukchon-ro 5-gil, Sogyeok-dong, Jongno-gu, Seoul, South Korea</string>
    <string name="food_Wooraeok_name">Wooraeok</string>
    <string name="food_Wooraeok_description">Wooraeok has been serving delicious Korean barbecue in Seoul since 1946, but the restaurant is also well known for its Pyongyang naengmyeon (Pyongyang-style cold buckwheat noodles). While most versions of this dish feature a subtle broth — often derided as bland — Wooraeok’s version is meatier and more flavorful, making it suitable for first-timers.</string>
    <string name="food_Wooraeok_address">62–29 Changgyeonggung-ro, Jung-gu, Seoul, South Korea</string>
    <string name="food_TukTukNoodleThai_name">Tuk Tuk Noodle Thai</string>
    <string name="food_TukTukNoodleThai_description">Among Yeonnam-dong’s vibrant streets you’ll find Tuk Tuk Noodle Thai, where Thai chefs have served the area for over a decade. The interior is decorated with items that owner Im Donghyuk and the team brought from Thailand. Try a handful of dishes and chase them down with ice-cold Thai beers, or something from the selection of Champagne and natural wines. Sister restaurant Soi Yeonnam Mao in Gangnam is another excellent option with a smaller menu featuring Tuk Tuk’s greatest hits.</string>
    <string name="food_TukTukNoodleThai_address">161–8 Seongmisan-ro, Mapo-gu, Seoul, South Korea</string>
    <string name="food_CharlesH_name">Charles H</string>
    <string name="food_CharlesH_description">Named the best bar in Korea on the Asia’s 50 Best Bars list in 2022, Charles H is a speakeasy discreetly hidden away in the lower level of the Four Seasons Hotel Seoul. After passing through a secret passage, guests find a glamorous interior suited for a lux hotel bar with decor inspired by Korea’s traditional metal ornaments. The cocktail list contains classics and original creations inspired by Charles H. Baker, the eponymous bon vivant who wrote the classic cocktail book The Gentleman’s Companion.</string>
    <string name="food_CharlesH_address">97 Saemunan-ro, Jongno-gu, Seoul, South Korea</string>
    <string name="food_BarCham_name">Bar Cham</string>
    <string name="food_BarCham_description">Wind your way through the alleys of Seochon until you come across the unassuming hanoak (traditional Korean house) that houses Bar Cham. There, award-winning bartender Lim Byung-jin serves uniquely Korean signature cocktails, each named for the region that produced the local spirit featured in the drink. The interior, which goes hard on oak (or “cham” in Korean), is cozy and relaxing. Bar Cham made the 2022 Asia’s 50 Best Bars list, and there are various non-alcoholic cocktail options just as delicious as their alcoholic counterparts.</string>
    <string name="food_BarCham_address">34 Jahamun-ro 7-gil, Tongin-dong, Jongno-gu, Seoul, South Korea</string>
    <string name="food_Kojima_name">Kojima</string>
    <string name="food_Kojima_description">With access to fresh seafood and the rich cultural influence of Japan, Seoul is home to some of the finest sushi outside of Japan. There are options at all price points, from cheap lunch boxes to high-end sushi, but many cite Kojima as the best in Korea. Located on top of luxury clothing store Boon the Shop, the restaurant is led by chef Kyung Jae Park, one of Seoul’s most respected sushi veterans, who gained a following while training at the Shilla Hotel’s Ariake and then cemented his reputation at his first restaurant, Sushi Chohi.</string>
    <string name="food_Kojima_address">21 Apgujeong-ro 60-gil, Gangnam-gu, Seoul, South Korea</string>
    <string name="food_BawiPastaBar_name">Bawi Pasta Bar</string>
    <string name="food_BawiPastaBar_description">Fresh pasta is having a moment in Korea, and Bawi Pasta Bar is at the center of the trend. Chef Kim Hyun-Joong started the business as a one-man operation in a deserted alley, pressing dough into noodles to order. His early hit, mint pistachio pesto, has become a cult favorite, along with others like squid ink pasta topped with caviar. Although Bawi has relocated to a newer, bigger venue, Kim still cooks alone for the most part for the eight-seat counter, and much of his 10-course dinners unfold in front of guests’ eyes. The calm black interior and excellent playlist add a zen-like ambiance that wouldn’t be out of place at a high-end Japanese restaurant. Reservations through Catchtable, a local reservation app, are a must — though very hard to come by.</string>
    <string name="food_BawiPastaBar_address">254 Itaewon-ro, Yongsan-gu, Seoul, South Korea</string>
    <string name="food_MaisonJo_name">Maison Jo</string>
    <string name="food_MaisonJo_description">Chef Jo Woo-Ram worked for five years at Maison Verot, a famous charcuterie restaurant in Paris, before opening ​​Maison Jo, Seoul’s leading French charcuterie house. The takeout menu of high-quality charcuteries includes pate, terrine, and saucisson, all made from Korean ingredients, as well as baguettes and other French breads and pastries made by patissier Lee Eunhee. Maison Jo’s jambon-beurre — a generous amount of butter and jambon blanc stuffed between slices of housemade baguette — is one of the city’s best sandwiches. You can also pick up premium European groceries such as olive oil, vinegar, and various natural wines.</string>
    <string name="food_MaisonJo_address">35 Banpo-daero 7-gil, Seocho 3(sam)-dong, Seocho-gu, Seoul, South Korea</string>
    <string name="food_CoffeeLibre_name">Coffee Libre</string>
    <string name="food_CoffeeLibre_description">For over a decade, Coffee Libre has pioneered the specialty coffee market in Korea. These days, the operation buys beans directly from over 100 farms in 12 countries, roasts them in Korea, and supplies more than 400 cafes in the country. Beyond supplying others, the brand has four of its own stores, including the main location in Yeonnam. Coffee Libre’s latte, made with an acidic double shot of espresso and warm milk, has become the standard for specialty coffee shops in Korea.</string>
    <string name="food_CoffeeLibre_address">198 Seongmisan-ro, Yeonnam-dong, Mapo-gu, Seoul, South Korea</string>
    <string name="food_FritzCoffeeCompany_name">Fritz Coffee Company</string>
    <string name="nametextview">nameTextview</string>
    <string name="categorytextview">categoryTextview</string>
    <string name="districttextview">districtTextview</string>
    <string name="bus_title1">Regional Buses</string>
    <string name="bus_content1">
        # Yellow Bus : 1st number (Area where bus is operating) / 2nd number (serial number (1~))\n
        # Blue Bus : 2nd number (Departure area) / 2nd number (Arrival area) / 3rd number (serial number (0~))\n
        # Green Bus : 1st number (Departure area) / 2nd number (Arrival area) / 3rd number (serial number (11~))\n
        # Red Bus : : 1st number (9) / 2nd number (Departure area) / 3rd number (serial number (00~))\n
        # Customized Bus : 1st number (8) / 2nd number (Departure area) / 3rd number (Arrival area) / 4th number (serial number (0~))\n
        # Airport Bus : 1st number (6 (0~7)) / Third Number (serial number (00~))\n
        # Midnight Bus : 1st number (N) / 2nd number (Departure area) / 3rd number (Arrival area)
    </string>
    <string name="bus_title2">Seoul Bus Numbers</string>
    <string name="bus_content2">
        # 0 area (Major Districts : Jung-gu, Jongno-gu, Yongsan-gu / Extension Line : none)\n
        # 1st area (Major Districts : Seongbuk-gu, Gangbuk-gu, Dobong-gu, Nowon-gu / Extension Line : Gyeonggi-do Yangju-si, Uijeongbu-si, Dongducheon-si, Pocheon-si)\n
        # 2nd area (Major Districts : Seongdong-gu, Gwangjin-gu, Dongdaemun-gu, Jungnang-gu / Extension Line : Gyeonggi-do Guri-si, Namyangju-si, Gapyeong-gun, Yangpyeong-gun)\n
        # 3rd area (Major Districts : Songpa-gu, Gangdong-gu / Extension Line : Gyeonggi-do Gwangju-si, Hanam-si, Icheon-si, Yeoju-si)\n
        # 4th area (Major Districts :Seocho-gu, Gangnam-gu / Extension Line : Gyeonggi-do Seongnam-si, Yongin-si, Anseong-si)\n
        # 5th area (Major Districts : Geumcheon-gu, Dongjak-gu, Gwanak-gu / Extension Line : Gyeonggi-do Anyang-si, Gunpo-si, Uiwang-si, Ansan-si, Gwacheon-si, Suwon-si, Hwaseong-si, Osan-si, Pyeongtaek-si)\n
        # 6th area (Major Districts : Yangcheon-gu, Gangseo-gu, Guro-gu, Yeongdeungpo-gu / Extension Line : Incheon Metropolitan City, Gyeonggi-do Gimpo-si, Bucheon-si, Gwangmyeong-si, Siheung-si)\n
        # 7th area (Major Districts : Eunpyeong-gu, Seodaemun-gu, Mapo-gu / Extension Line : Gyeonggi-do  Goyang-si, Paju-si, Yeoncheon-gun)
    </string>
    <string name="bus_title3">Fare &amp; Transfer System</string>
    <string name="bus_content3">
        # Fares can be paid with cash or transportation card for a flat rate each time you board\n
        # Fares for Seoul city buses and Maeul (Village) buses can be paid with T-money, U-Pass, EB Card, Cashbee, and Korail Membership Cards. Deferred payment transportation cards, which are compatible with T-Money and U-Pass, can be used as well.\n
        # Seoul city buses are free for a maximum of 3 children under the age of 6 if they are accompanied by a guardian. Legal free riders who are defined in the Passenger Transport Service Act of Korea are also able to ride for free.\n
        # Seoul, Gyeonggi Province (Gyeonggi-do), Incheon buses and metropolitan subways are under the Metropolitan Integrated Fare System, so they charge a basic fare for distances up to 10 km. Using Seoul metropolitan buses, Gyeonggi Province general buses, non-stop deluxe buses, Incheon buses, and red buses for no more than one transfer will cost the basic fare up to 30 km, and an extra KRW 100 for each additional 5 km (for adults).\n
        # Multiple passengers on one card and transfer discounts are available only on city buses, and only if those passengers are traveling to the same destination.
    </string>
    <string name="bus_title4">T-money Card</string>
    <string name="bus_content4">
        # T-money is a transport card issued by Korea Smart Card. It can be used as a transport card and e-currency. It is commonly used in the metropolitan area, along with Cashbee.\n
        # T-money transport cards come in two types: a common T-money card and a Smart T-money card. Smart T-money cards are sold in various forms, such as key rings and cell phone rings. All T-money cards can be recharged at subway stations and convenience stores.
    </string>
</resources>