<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transportation_Bus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/bus_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_orange"
            android:text="@string/bus_title1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bus_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/bus_content1" />

        <TextView
            android:id="@+id/bus_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_orange"
            android:text="@string/bus_title2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bus_content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/bus_content2" />

        <TextView
            android:id="@+id/bus_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_orange"
            android:text="@string/bus_title3"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bus_content3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/bus_content3" />

        <TextView
            android:id="@+id/bus_title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_orange"
            android:text="@string/bus_title4"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bus_content4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/bus_content4" />

    </LinearLayout>

</ScrollView>