<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/iv_photo"
            android:src="@mipmap/ic_launcher"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/item1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorytextview"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/item2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametextview"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item3_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/districttextview"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
